clusters/homelab/apps/ontime/dsm-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ontime-dsm
  namespace: ontime
spec:
  selector:
    app: ontime-dsm
  ports:
    - port: 80
      targetPort: 4001
