clusters/homelab/apps/ontime/gfx-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ontime-gfx
  namespace: ontime
spec:
  selector:
    app: ontime-gfx
  ports:
    - port: 80
      targetPort: 4001
